--- a/services/samba.yml
+++ b/services/samba.yml
@@ -6,6 +6,6 @@ samba:
     - /mnt/data:/mount
   environment: 
     - PERMISSIONS="true"
-    - SHARE1="scan;/mount/scan;yes;no;yes"
+    - SHARE="scan;/mount/scan;yes;no;yes"
     - SHARE2="media;/mount/media;yes;no;yes"
     - SHARE3="docs;/mount/docs;yes;no;yes"
