--- a/services/samba.yml
+++ b/services/samba.yml
@@ -2,7 +2,7 @@ samba:
   image: dperson/samba
   restart: unless-stopped
   net: host
-  mem_limit: 512
+  mem_limit: 536870912
   volumes: 
     - /mnt/data:./mount
   environment: 
