--- a/services/samba.yml
+++ b/services/samba.yml
@@ -2,7 +2,10 @@ samba:
   image: dperson/samba
   restart: unless-stopped
   net: host
-  mem_limit: 536870912
+  deploy:
+    resources:
+      limits:
+        memory: 512M
   volumes: 
     - /mnt/data:./mount
   environment: 
