--- a/services/samba.yml
+++ b/services/samba.yml
@@ -7,7 +7,7 @@ samba:
       limits:
         memory: 512M
   volumes: 
-    - /mnt/data:./mount
+    - /mnt/data:/mount
   environment: 
     - PERMISSIONS="true"
     - SHARE="scan;/mount/scan;yes;no;yes"
