--- a/services/samba.yml
+++ b/services/samba.yml
@@ -2,14 +2,14 @@ samba:
   image: dperson/samba
   restart: unless-stopped
   net: host
+  volumes: 
+    - /mnt/data:/mount
+  command:
+    - '-p'
+    - '-s "scan;/mount/scan;yes;no;yes"'
+    - '-s "media;/mount/media;yes;no;yes'
+    - '-s "docs;/mount/docs;yes;no;yes'
   deploy:
     resources:
       limits:
-        memory: 512M
-  volumes: 
-    - /mnt/data:/mount
-  environment: 
-    - PERMISSIONS="true"
-    - SHARE="scan;/mount/scan;yes;no;yes"
-    - SHARE2="media;/mount/media;yes;no;yes"
-    - SHARE3="docs;/mount/docs;yes;no;yes"
+        memory: 512M  
