remove cmd quotes

--- a/services/samba.yml
+++ b/services/samba.yml
@@ -6,9 +6,9 @@ samba:
     - /mnt/data:/mount
   command:
     - -p
-    - -s "scan;/mount/scan;yes;no;yes"
-    - -s "media;/mount/media;yes;no;yes"
-    - -s "docs;/mount/docs;yes;no;yes"
+    - -s scan;/mount/scan;yes;no;yes
+    - -s media;/mount/media;yes;no;yes
+    - -s docs;/mount/docs;yes;no;yes
   deploy:
     resources:
       limits:
