--- a/services/samba.yml
+++ b/services/samba.yml
@@ -6,7 +6,7 @@ samba:
     - /mnt/data:/mount
   command:
     - -p
-    - -S
+    - -u foo;bar
     - -s scan;/mount/scan;yes;no;yes
     - -s media;/mount/media;yes;no;yes
     - -s docs;/mount/docs;yes;no;yes
